--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -37,6 +37,7 @@
             android:gravity="bottom"
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="@android:color/white"
+            android:textSize="18sp"
             android:textStyle="bold"
             tools:text="lutti" />
 
@@ -48,6 +49,7 @@
             android:layout_weight="1"
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="@android:color/white"
+            android:textSize="18sp"
             tools:text="one" />
     </LinearLayout>
 </LinearLayout>
